--- a/SCSS/style.css
+++ b/SCSS/style.css
@@ -173,7 +173,6 @@ img {
   font-size: 32px;
   font-weight: bold;
   color: #221E1F;
-  padding-bottom: 24px;
 }
 
 .container h3 {
@@ -182,7 +181,7 @@ img {
 }
 
 .container h4 {
-  font-size: 16px;
+  font-size: 18px;
   font-weight: bold;
 }
 
@@ -190,7 +189,20 @@ img {
   font-size: 16px;
 }
 
-.social-item {
+.paybtn {
+  width: 138px;
+  display: inline-block;
+  background-color: #56C4C5;
+  color: #FFFFFF;
+  font-size: 18px;
+  text-decoration: none;
+  border: 1px solid #56C4C5;
+  border-radius: 27px;
+  padding: 12px 32px;
+}
+
+.social {
+  margin-top: 48px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -202,25 +214,29 @@ img {
           align-items: center;
 }
 
-.social-item li {
+.social li {
   width: 323px;
   text-align: center;
 }
 
-.social-item li img {
+.social li img {
   width: 90px;
   height: 90px;
 }
 
-.social-item li h3 {
+.social li h3 {
   font-size: 24px;
   font-weight: bold;
   margin: 16px 0px;
 }
 
-.social-item li p {
+.social li p {
   font-size: 16px;
   padding: 0px 40px;
+}
+
+.roles h2 {
+  margin-bottom: 16px;
 }
 
 .role {
@@ -256,5 +272,207 @@ img {
 
 .role li p {
   padding: 16px 16px 24px 16px;
+}
+
+.service {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.service1 {
+  width: 507px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.service1 li {
+  text-align: left;
+  width: 230px;
+  height: 280px;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  -webkit-box-shadow: 0px 2px 10px #00000014;
+          box-shadow: 0px 2px 10px #00000014;
+  border-radius: 12px;
+  padding: 30px 30px 30px 32px;
+  margin-bottom: 24px;
+}
+
+.service1 li .icon-img {
+  width: 86px;
+  height: 86px;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  -webkit-box-shadow: 0px 2px 10px #00000014;
+          box-shadow: 0px 2px 10px #00000014;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 24px;
+}
+
+.service1 li h4 {
+  text-align: left;
+  margin-bottom: 16px;
+}
+
+.service1 li p {
+  text-align: left;
+  line-height: 150%;
+}
+
+.service2 {
+  width: 395px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.service2 h2 {
+  width: 256px;
+  text-align: left;
+  line-height: 150%;
+}
+
+.service2 h4 {
+  text-align: left;
+  line-height: 150%;
+  padding-bottom: 16px;
+}
+
+.user-feedback {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.user-feedback .user-img {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.user-content {
+  width: 352px;
+  height: auto;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  -webkit-box-shadow: 0px 2px 10px #00000014;
+          box-shadow: 0px 2px 10px #00000014;
+  border-radius: 12px;
+  padding: 48px 32px 24px 32px;
+}
+
+.user-content .user-msg {
+  line-height: 150%;
+  text-align: left;
+  padding-bottom: 16px;
+}
+
+.user-content .company {
+  font-size: 16px;
+  font-weight: bold;
+  text-align: left;
+  padding: 16px 0;
+}
+
+.user-content .user-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.dots {
+  margin-top: 16px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.dots .dot-item {
+  width: 10px;
+  height: 10px;
+  background-color: #DDDDDD;
+  border-radius: 50px;
+  margin-right: 8px;
+}
+
+.dots .dot-yellow {
+  width: 16px;
+  height: 10px;
+  border-radius: 50px;
+  background-color: #FFD153;
+}
+
+.footer {
+  height: 503px;
+  background-image: url("../images/home_footer.svg");
+  background-repeat: no-repeat;
+  opacity: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer h2 {
+  font-size: 32px;
+  font-weight: bold;
+  color: #221E1F;
+  text-align: center;
+  margin: 144px 0px 48px 0px;
+}
+
+.footer-nav {
+  background-color: #F5F5F5;
+  padding: 16px 0px 16px 0px;
+  text-align: center;
 }
 /*# sourceMappingURL=style.css.map */
