--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -83,14 +83,13 @@
     font-size: 32px;
     font-weight: bold;
     color: #221E1F;    
-    padding-bottom: 24px;
   }
   h3{
     font-size: 20px;    
     padding-bottom: 20px;
   }
   h4{
-    font-size: 16px;
+    font-size: 18px;
     font-weight: bold;
   }
   p{
@@ -98,10 +97,23 @@
   }
 }
 
-.social-item{
+.paybtn{
+  width: 138px;
+  display: inline-block;    
+  background-color: #56C4C5;;
+  color: #FFFFFF;
+  font-size: 18px;
+  text-decoration: none;
+  border: 1px solid #56C4C5;
+  border-radius: 27px;  
+  padding: 12px 32px;
+}  
+
+.social{
+  margin-top: 48px;
     display: flex;
     justify-content: space-between;
-    align-items: center;    
+    align-items: center;
     li{
       width: 323px;
       text-align: center;
@@ -121,6 +133,12 @@
     }
   }
 
+.roles{
+  h2{
+    margin-bottom: 16px;
+  }
+}
+
 .role{
   display: flex;
   justify-content: space-around;  
@@ -135,7 +153,7 @@
       img{
         border-radius: 12px 12px 0px 0px;
         width: 100%;
-        height: 100%;        
+        height: 100%;
       }
     }
     h4{
@@ -148,3 +166,142 @@
 
 }
 
+.service{
+  display: flex;
+  justify-content: space-around;
+}
+
+.service1{
+  width: 507px;  
+  display: flex;
+  justify-content: space-between;  
+  flex-wrap: wrap;
+  li{      
+    text-align: left; 
+    width: 230px;
+    height: 280px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    box-shadow: 0px 2px 10px #00000014;
+    border-radius: 12px;
+    padding: 30px 30px 30px 32px;
+    margin-bottom: 24px;
+    .icon-img{
+      width: 86px;
+      height: 86px;
+      background: #FFFFFF 0% 0% no-repeat padding-box;
+      box-shadow: 0px 2px 10px #00000014;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 24px;
+    }
+    h4{
+      text-align: left;
+      margin-bottom: 16px;
+    }
+    p{
+      text-align: left;
+      line-height: 150%;
+    }
+  }
+}
+
+.service2{
+  width: 395px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  h2{
+    width: 256px;
+    text-align: left;      
+    line-height: 150%;
+  }
+  h4{
+    text-align: left;
+    line-height: 150%;
+    padding-bottom: 16px;
+  }
+}
+
+.user-feedback{
+  display: flex;
+  justify-content: space-between;
+  .user-img{
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;    
+  }
+
+}
+
+.user-content{
+  width: 352px;
+  height: auto;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  box-shadow: 0px 2px 10px #00000014;
+  border-radius: 12px;
+  padding: 48px 32px 24px 32px;
+  .user-msg{
+    line-height: 150%;
+    text-align: left;
+    padding-bottom: 16px;
+  }
+  .company{
+    font-size: 16px;
+    font-weight: bold;
+    text-align: left;
+    padding: 16px 0;
+  }
+  .user-nav{
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+.dots{
+  margin-top: 16px;
+  display: flex;
+  justify-content: center;
+  .dot-item{
+    width: 10px;
+    height: 10px;
+    background-color: #DDDDDD;    
+    border-radius: 50px;
+    margin-right: 8px;    
+  }
+  .dot-yellow{
+    width: 16px;
+    height: 10px;    
+    border-radius: 50px;
+    background-color: #FFD153;
+  }
+}
+
+.footer{   
+  height: 503px;
+  background-image: url("../images/home_footer.svg");
+  background-repeat: no-repeat;    
+  opacity: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  h2{
+    font-size: 32px;
+    font-weight: bold;
+    color: #221E1F;
+    text-align: center;
+    margin: 144px 0px 48px 0px;
+  }
+ 
+}
+
+.footer-nav{
+  background-color: #F5F5F5;
+  padding: 16px 0px 16px 0px;
+  text-align: center;
+}
